--- a/codes/KOTE_pytorch_lightning.ipynb
+++ b/codes/KOTE_pytorch_lightning.ipynb
@@ -790,6 +790,7 @@
     "\n",
     "from pytorch_lightning.callbacks import ModelCheckpoint, EarlyStopping\n",
     "from pytorch_lightning.loggers import TensorBoardLogger\n",
+    "from pytorch_lightning.callbacks import TQDMProgressBar\n"
     "\n",
     "## the check point\n",
     "checkpoint_callback = ModelCheckpoint(\n",
@@ -830,10 +831,9 @@
     "\n",
     "trainer = pl.Trainer(\n",
     "    logger=logger,\n",
-    "    callbacks=[checkpoint_callback, early_stopping_callback],\n",
+    "    callbacks=[checkpoint_callback, early_stopping_callback, TQDMProgressBar(refresh_rate=5)],\n",
     "    max_epochs=N_EPOCHS,\n",
-    "    gpus=[2], ## GPU number\n",
-    "    progress_bar_refresh_rate=5\n",
+    "    gpus=[2], ## GPU number\n"
     ")"
    ]
   },
